--- a/src/css/guest_style.css
+++ b/src/css/guest_style.css
@@ -1249,6 +1249,7 @@ footer {
     left: 0;
     margin: 0;
     padding: 0;
+    box-shadow: 0 0 2px 0px black;
     display: flex;
     justify-content: center;
     justify-content: space-between;
@@ -1258,15 +1259,14 @@ footer {
 }
 .main-category > li {
     padding: 10px 20px;
-    background-color: #eee;
+    background-color: white;
     width: 100%;
     text-align: center;
     font-size: 20px;
     position: relative;
 }
 .main-category > li:hover {
-    background-color: white;
-
+    background-color: rgb(255, 123, 0);
 }
 .category-nav {
     list-style: none;
@@ -1287,10 +1287,10 @@ footer {
 }
 .category-nav {
     
-    display: none;
+    display:block;
 }
 .category-nav > li:hover {
-    background-color: rgb(231, 170, 147);
+    color: #FB5607;
 }
 .main-category li:hover .category-nav {
     display: block;
@@ -1307,10 +1307,10 @@ footer {
     flex-direction: column;
     min-width: max-content;
     width: 100%;
-    display: none;
+    display: flex;
 }
 .sub-category li {
-    background-color: green;
+    background-color: white;
     height: 50px;
     display: flex;
     align-items: center;
@@ -1319,14 +1319,14 @@ footer {
 }
 .sub-category > a {
     text-decoration: none;
-    margin: 20px;
+    margin: 10px;
     position: relative;
     background-color: white;
-    padding: 20px;
+    padding: 10px;
 
 }
 .sub-category > li:hover {
-    background-color: aqua;
+    background-color: white;
 }
 .main-category .category-nav > li:hover .sub-category {
     display: flex;
