--- a/src/css/dash_style.css
+++ b/src/css/dash_style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 /* :root {
     --main-color:#2196f3;
@@ -234,6 +236,45 @@ a {
 .upper-sidebar h3 {
     margin-bottom: 20px;
 }
+.upper-sidebar ul li {
+    margin-top: 5px;
+}
+.sidebar ul li a:hover .dash-i,
+  .sidebar ul li a.active .dash-i {
+    content: url("/images/dashboard-orange.svg");
+  }
+.sidebar ul li a:hover .sales-i,
+  .sidebar ul li a.active .sales-i {
+    content: url("/images/shopping-cart-orange.svg");
+  }
+.sidebar ul li a:hover .products-i,
+  .sidebar ul li a.active .products-i {
+    content: url("/images/product-orange.svg");
+  }
+.sidebar ul li a:hover .chat-i,
+  .sidebar ul li a.active .chat-i {
+    content: url("/images/chat-orange.svg");
+  }
+.sidebar ul li a:hover .delivery-i,
+  .sidebar ul li a.active .delivery-i {
+    content: url("/images/delivery-orange.svg");
+  }
+.sidebar ul li a:hover .store-i,
+  .sidebar ul li a.active .store-i {
+    content: url("/images/shop-orange.svg");
+  }
+.sidebar ul li a:hover .plan-i,
+  .sidebar ul li a.active .plan-i {
+    content: url("/images/contract-orange.svg");
+  }
+.sidebar ul li a:hover .ads-i,
+  .sidebar ul li a.active .ads-i {
+    content: url("/images/megaphone-orange.svg");
+  }
+.sidebar ul li a:hover .settings-i,
+  .sidebar ul li a.active .settings-i {
+    content: url("/images/setting-orange.svg");
+  }
 .upper-sidebar ul li a img {
     width: 20px;
 }
@@ -283,8 +324,9 @@ a {
   .sidebar ul li a:hover,
   .sidebar ul li a.active {
     background-color: rgba(255, 68, 0, 0.212);
-    margin: 5;
+    
     color: #FB5607;
+    box-shadow: 0px 1px 3px 0px rgb(132, 132, 132);
   }
   .sidebar ul li a span {
     font-size: 14px;
@@ -339,7 +381,7 @@ a {
     justify-content: center;
     background-color: #FB5607;
     padding: 10px;
-
+    margin-top: 20px;
     border-radius: 8px;
     color: white;
     margin-left: 28px;
@@ -351,17 +393,25 @@ a {
   }
   .sidebar .under-sidebar h5 {
     margin-bottom: 5px;
+    
   }
   .sidebar .under-sidebar p {
     text-align: center;
     margin-top: 5px;
     font-size: 10px;
+    font-weight: 100;
     margin-bottom: 5px;
+  }
+  .sidebar .upper-sidebar .line {
+    width: 100%;
+    margin: 15px 0;
+    height: 1px;
+    background-color: rgb(140, 140, 140);
   }
   .sidebar .under-sidebar .upgrade {
     border: none;
-    padding: 7px;
-    margin-top: 5px;
+    padding: 7px 14px;
+    margin-top: 10px;
     border-radius: 5px;
     color: #FB5607;
     margin-bottom: 5px;
@@ -372,40 +422,161 @@ a {
     margin-top: 30px;
     margin-bottom: 50px;
 }
-.product-head {
+.topper-products {
+    display: flex;
+    width: 100%;
+    padding: 10px 10px 0 10px;
+    margin: 5px 5px 0 5px;
+    justify-content: space-between;
+}
+.topper-products .filters{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    
+}
+
+.topper-products .filters .filter {
+    padding: 10px 20px;
+    background-color: white;
+    border-radius: 20px;
+    margin-right: 15px;
+    margin-bottom: 5px;
+    font-size: 12px;
+    font-weight: 600;
+    border: 0.5px solid #bfbfbf;
+    cursor: pointer;
+}
+.topper-products .filters .filter:hover{
+    color: #FB5607;
+    
+    border: 0.5px solid #FB5607;
+}
+
+.topper-products .filters .active-filter{
+    background-color: #FB5607;
+    color: white;
+}
+.topper-products .select-mode {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.topper-products .select-mode .table{
+    margin: 10px;
+    padding: 10px 0;
+    font-weight: 600;
+    cursor: pointer;
+}
+.topper-products .select-mode .line{
+    height: 35%;
+    margin-inline: 8px;
+    width: 1px;
+    background-color: #FB5607;
+}
+.text-topper{
+    text-align: baseline;
+    font-weight: 550px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-size: 25px;
+    margin-left: 5px;
+    padding: 0px 0;
+    border-bottom: 0.3px solid rgb(188, 188, 188);
 }
+.order-container{
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+.order-container label{
+    font-size: 13px;
+    font-weight: 700;
+    margin-right: 10px;
 
-.product-table * {
 }
-.product-table {
-    width: 95%;
-    margin: auto;
+.order-container #order {
+    padding: 5px 0px 5px 10px;
+    outline: none;
+    border-radius: 7px;
 }
-#choice-1 {
-    display: none;
+.order-container #order:focus {
+    border-color: #FB5607;
+    color: #FB5607;
 }
-
-.product-table th {
-    padding: 15px 0;
+.order-container #order:hover {
+    border-color: #FB5607;
+    color: #FB5607;
+}
+.order-container #order option {
+    border: none;
+    background-color: white;
     color: black;
 }
-.product-vertical .product-table td {
-    text-align: center;
-    padding: 15px;
-
+.order-container #order option:hover{
+    background-color: white;
 }
-.product-vertical .product-table thead tr {
+.text-topper div:hover{
+    color: #FB5607;
     
+    border: 1px solid #FB5607;
+}
+.text-topper div:hover .iconify{
+    color: #FB5607;
+}
+.text-topper div {
+    font-size: 14px;
+    font-weight: 500;
+    background-color: white;
+    color: #222;
+    border-radius: 23px;
+    display: flex;
+    align-items: center;
+    border: 1px solid #222;
+    cursor: pointer;
+    padding: 5px 15px;
+    margin-bottom: 7px;
+
 
 }
- .table-head{
-    border: 2px solid black;
-    outline: 2px solid black;
+.text-topper .iconify {
+    color: #222;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+    font-size: 20px;
 }
-
+.topper-products .select-mode .active-choice {
+    color: #FB5607;
+    border-bottom: 1px solid #FB5607;
+}
+.topper-products .select-mode .list{
+    margin: 10px;
+padding: 10px 0px;
+font-weight: 600;
+cursor: pointer;
+}
+th {
+    text-transform: uppercase;
+    padding: 15px 8px;
+    background-color: #FB5607;
+    color: white;
+}
+td {
+    padding: 12px 8px;
+    background-color: #eee;;
+    color: black;
+    font-weight: 500;
+}
+table {
+    width: 100%;
+    margin: 5px;
+    align-items: center;
+    text-align: center;
+    border-radius:10px;
+    overflow: hidden;
+}
 
 
 
@@ -440,17 +611,23 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height:140px;
+    flex-direction: column;
+    height: 60px;
     margin: 25px;
     border-radius: 5px;
     margin-bottom: 0px;
     
-
     position: relative;
     z-index: 5;
     
     background:white;
    
+}
+.section-head{
+    border-top: 1px solid rgb(196, 196, 196);
+    text-align: center;
+    padding: 20px;
+    width: 100%;
 }
 .product-vertical {
     background-color: #00FF55;
@@ -467,22 +644,43 @@ header {
     background-color: rgba(251, 86, 7, 0.2);
 }
 
+.head-flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
 
+
+.logo {
+    text-align: center;
+    width: 120px;
+}
+.heading {
+    display: flex;
+    align-items: center;
+}
 .heading ul {
     display:flex;
-
+    align-items: center;
+    
+}
+.heading ul li {
+    display: flex;
+    align-items: center;
 }
 
 .logo a {
-    color:white;
-    transition-duration: 1s;
+    color:black;
+    transition-duration: 0.2s;
     font-weight: 800;
-    
+   
 }
 
 .logo a:hover {
-    color: blue;
-    transition-duration: 1s;
+    color: #FB5607;
+    transition-duration: 0.2s;
    
 }
 
@@ -491,59 +689,69 @@ header {
    
 }
 .heading ul li a {
-    margin:5px;
     text-decoration: none;
     color:black;
     font-weight: 500;
     position:relative;
-    color:white;
-    margin:2px 14px;
-    font-size: 18px;
-    transition-duration: 1s;
+    color:black;
+    height: 40px;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 17px;
+    transition-duration: 0.3s;
+    padding: 5px 12px;
+    overflow: hidden;
    
 }
 
-.heading ul li a:active {
-    color:red;
-  
-}
+
 
 .heading ul li a:hover {
-    color:rgb(243, 168, 7);
-    transition-duration: 1s;
+    color: #FB5607;
+    padding: 12px;
+    transition-duration: 0.3s;
    
 }
 
 .heading ul li a::before {
     content:'';
-    height:2px;
-    width:0px;
+    height:4px;
+    width:100%;
     position:absolute;
-    left:0;
+    left:-100%;
     bottom:0;
-    background-color: white;
-    transition-duration: 1s;
+    background-color: #FB5607;
+    transition-duration: 0.5s;
    
 }
 
 .heading ul li a:hover::before {
-    width:100%;
-    transition-duration: 1s;
-    background-color:rgb(243, 168, 7);
-   
+    left: 0;
+    
 }
 
-#input {
-    height:30px;
-    width:300px;
+
+
+.search #input {
+    height: 100%;
+    width: 100%;
     text-decoration: none;
-    border:0px;
-    padding:5px;
+    border: 0.3px solid rgb(163, 163, 163);
+    padding: 8px;
+    border-radius: 7px;
+    padding-left: 10px;
+    padding-right: 32px;
    
+}
+.search #input:focus {
+    outline: none;
+    border: 1px solid #FB5607;
+    border-radius: 7px;
 }
 
 .logo a {
-    color: white;
+    color: black;
     font-size: 35px;
     font-weight: 500;
     text-decoration:none;
@@ -552,67 +760,178 @@ header {
 
 ion-icon {
     width:20px;
-    height:30px;
+    height: 100%;
     padding-right: 5px;
     padding-left: 5px;
-    background-color: white;
     color:black;
-    border-top-right-radius:  15px;
-    border-bottom-right-radius: 15px;
 }
+
 ion-icon:hover {
     cursor: pointer;
    
 }
 
+.search{
+    justify-content: center;
+    position: relative;
+    width: 40%;
+    overflow: hidden;
+    border-radius: 7px;
+}
 .search a {
+    position: absolute;
+    top: 0;
+    right: 5px;
+    height: 100%;
+    z-index: 40;
     display:flex;
-   
+    
 }
 
-header a ion-icon {
-    position:relative;
-    right:3px;
-   
-} 
-.search {
-   border-radius: 15px;
+/* start category drop down */
+
+.category-header{
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 20px;
+    height: 40px;
+    align-items: center;
+    border-radius: 7px;
+    padding: 0 0px;
+    position: relative;
+    z-index: 2;
 }
-.search .category {
-   background-color: white;
-   border-right: 2px solid black;
-   height: 30px;
-   border-top-left-radius: 15px;
-   border-bottom-left-radius: 15px;
-   
+.category-header:hover a {
+    color: #FB5607;
 }
-.widthis{
-    background-color: #00FF55;
-    width: 1;
+.category-header::before{
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 4px;
+    background-color: #FB5607;
+    bottom: 0;
+    left: 0;
+    transition: 0.5s;
 }
-.category .tv-cate {
-   display: inline-block;
-   margin: auto auto;
-   padding: auto;
-   padding-right: 5px;
-   padding-left: 10px;
-   margin-top: 5px;
+.category-header:hover::before {
+    width: 100%;
+}
+.category-header:hover{
+    border-bottom: none;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+ul {
+    list-style: none;
+}
+.category-header a{
+    color: black;
+    font-size: 17px;
+    font-weight: 500;
+}
+a{
+    text-decoration: none;
+}
+.category-header img {
+    width: 15px;
+    margin-left: 10px;
+    margin-top: 1px;
+}
+
+.category-header .categories > ul {
+    list-style: none;
+}
+
+.category-header .all-categories {
+    height: fit-content;
+    background-color: white;
+    position: absolute;
+    display: none;
+    top: 100%;
+    border-top: none;
+    left: -100%;
+    border-top: 0.01px solid rgb(232, 232, 232);
+    
+    box-shadow: 0 10px 10px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 7px;
 
 }
-.category .img-cate {
-   display: inline-block;
-   width: 15px;
-   height: 15px;
-   margin-top: 5px;
-   margin-right: 10px;
-
+.category-header:hover .all-categories{
+    display: flex;
 
 }
-.category .line {
-   height: 50px;
-   width: 2px;
-   background-color: black;
+.category-header .all-categories .categories-nav {
+    
+    padding: 20px 40px;
+    margin-right: 1px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+    
 }
+.category-header .all-categories .categories-nav .categories-list {
+    width: 100%;
+}
+.category-header .all-categories .categories-nav .categories-list li {
+    padding: 4px;
+    width: fit-content;
+    font-size: 18px;
+    white-space: nowrap;
+    font-weight: 500;
+}
+.category-header .all-categories .categories-nav::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 0.2px;
+    background-color: #feddcd;
+}
+
+.category-header .all-categories .sub-categories {
+    
+    padding: 10px 30px;
+    
+}
+.category-header .all-categories .sub-categories h2 {
+    position: relative;
+    padding: 0 0 5px 0;
+    font-size: 18px;
+    white-space:nowrap;
+    margin-bottom: 7px;
+    color: #FB5607;
+}
+.category-header .all-categories .sub-categories h2::before{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 5%;
+    height: 0.2px;
+    
+    width: 90%;
+    background-color: #feddcd;
+}
+.category-header .all-categories .sub-categories .sub-categories-list li {
+    font-size: 18px;
+    padding: 4px 0px;
+    white-space: nowrap;
+    text-align: left;
+}
+
+
+
+
+
+
+
+
+
+
 
 /* //////////////////////////////////////////////////////////////////// */
 .section2 .container {
@@ -628,65 +947,139 @@ header a ion-icon {
    
 }
 
-
 .section2 .container .items {
     margin: 10px;
     width:200px;
-    height: 285px;
+    height: 302px;
+    overflow: hidden;
+    position: relative;
     background-color:white;
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 12px;
+    box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
    
 }
-
+.section2 .container .items:hover {
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.25);
+}
+.section2 .container .items .icons {
+    position: absolute;
+    width: 30px;
+    display: flex;
+    flex-direction: column;
+    top: 10px;
+    right: -50px;
+    transition: 0.5s;
+}
+.section2 .container .items:hover .icons {
+    right: 1px;
+}
+.section2 .container .items:hover .icons a{
+    color: #333;
+}
+.section2 .container .items .icons a {
+    color: #333;
+}
+.section2 .container .items .icons .add-cart {
+    border: 1px solid rgb(163, 163, 163);
+    background-color: #ffffff;    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    
+}
+.section2 .container .items .icons .add-wish {
+    border: 1px solid rgb(163, 163, 163);
+    background-color: #ffffff;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    
+}
+.section2 .container .items .icons .display {
+    border: 1px solid rgb(163, 163, 163);
+    background-color: #ffffff;    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    
+}
+.section2 .container .items .icons a:hover {
+    color: #FB5607;
+    
+    border: 1px solid #FB5607;
+}
 .section2 .container .items .name {
     text-align:left;
     height:25px;
    
     padding-top:4px;
-    color:black;
-    font-weight: bold;
+    color:#FB5607;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 10px;
+    font-weight: 500;
     margin: 0;
+    font-size: 12px;
+    font-weight: 500;
     margin-left: 9px;
    
 }
-
+.section2 .container .items .prices{
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    flex-direction: column;
+}
 .section2 .container .items .price {
-    float:left;
     padding-left:10px;
     display: block;
    
-    display: inline-block;
     color:rgb(0, 0, 0);
     font-weight: 650;
     font-size: 14px;
    
 }
 .section2 .container .items .old-price {
-   float: left;
-   padding: 4px;
-   padding-left: 10px;
+  
    text-decoration: line-through;
-   font-size: 10px;
-   
+   font-size: 12px;
+   font-weight: 300;
+   padding-left: 10px;
+   margin-top: 8px;
 
 }
+.section2 .container .items .foot-items {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.section2 .container .items .review{
+    display: flex;
+    padding-right: 10px;
+    align-items: center;
+}
 .section2 .container .items .review .start-img {
-   float: left;
    width: 10px;
    height: 10px;
    display: flex;
-   margin-top: 3px;
+   align-items: center;
+   margin-left: 3px;
+   margin-top: -3px;
    
    
 }
 .section2 .container .items .review  .review-is {
-   float: left;
    font-size: 10px;
-   display: inline-block;
-   padding: 4px;
-   margin-left: 15px;
-
    
 }
 
@@ -694,6 +1087,7 @@ header a ion-icon {
 
 .section2 .container .items .info {
     padding-left:10px;
+    padding-right: 10px;
     margin-top: 4px;
     color:rgb(63, 63, 63);
     font-size: 12px;
@@ -701,6 +1095,8 @@ header a ion-icon {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-size: 13px;
+    font-weight: 300px;
    
    
 }
@@ -709,7 +1105,7 @@ header a ion-icon {
     width:180px;
     height:180px;
     margin: 10px;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 0;
     transition-duration:0.8s;
    
@@ -723,7 +1119,7 @@ header a ion-icon {
 
 .section2 .container .items:hover .img img {
     transform: scale(1.2);
-    transition-duration:0.8s;
+    transition-duration:0.6s;
     border-radius:12px;
    
 }
