--- a/src/css/add-cat.css
+++ b/src/css/add-cat.css
@@ -122,6 +122,7 @@ body {
 #h2 {
     font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
     margin-bottom: 20px;
+    font-size: 25px;
     transform: translate(-3%);
 }
 
@@ -169,10 +170,10 @@ body {
     -moz-transition: all 0.4s ease;
     transition: all 0.4s ease;
 } */
-label {
-    color: #555;
+#labelN {
     text-transform: capitalize;
     margin-right: 7px;
+    font-size: 18px;
 }
 
 .input-container {
@@ -203,7 +204,9 @@ label {
     text-transform: capitalize;
 }
 
-input {
+input,
+select {
+    margin: 10px 0;
     background: #cac6c6;
     -webkit-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.08);
@@ -212,7 +215,7 @@ input {
     -moz-border-radius: 5px;
     border-radius: 5px;
     padding: 0 10px;
-    font-size: 16px;
+    font-size: 18px;
     color: #666;
     border: none;
     -webkit-transition: all 0.4s ease;
@@ -228,4 +231,19 @@ button {
     display: inline-flex;
     justify-content: center;
     font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
+    transform: translate(250%);
+}
+
+#walid {
+    padding: 0 10px;
+    cursor: pointer;
+    font-size: 14px;
+    display: inline-flex;
+    justify-content: center;
+    font-family: "Poppins", "Arial", "Helvetica Neue", sans-serif;
+    background-color: #c9c1c1;
+    border-radius: 4px;
+    line-height: 50px;
+    font-size: 18px;
+    margin-top: 10px;
 }
