link add product

--- a/src/css/add-product.css
+++ b/src/css/add-product.css
@@ -493,7 +493,7 @@ input[type="date" i] {
 /* ==========================================================================
    #FORM
    ========================================================================== */
-input {
+input ,#TypeLivraisonSelect{
   outline: none;
   margin: 0;
   border: none;
