--- a/src/css/prodect.css
+++ b/src/css/prodect.css
@@ -261,7 +261,7 @@ header {
   padding: 0;
   background-color: var(--color-whitesmoke);
   position: absolute;
-  top: 0.31rem;
+  top: 4.31rem;
   left: 21.63rem;
   width: 5.94rem;
   height: 1.31rem;
@@ -399,7 +399,7 @@ header {
 
 .frame-edit {
   background-color: var(--color-whitesmoke);
-  top: 0.38rem;
+  top: 2.38rem;
   left: 40.75rem;
   width: 1.75rem;
   height: 1.69rem;
@@ -418,7 +418,7 @@ header {
 
 .frame-delet {
   background-color: var(--color-whitesmoke);
-  top: 0.44rem;
+  top: 2.44rem;
   left: 38.81rem;
   width: 1.81rem;
   height: 1.63rem;
@@ -437,7 +437,7 @@ header {
 .nb-avis {
   position: absolute;
   top: 4.38rem;
-  left: 27.06rem;
+  left: 28.06rem;
   font-size: var(--font-size-3xs);
   font-weight: 300;
   display: inline-block;
@@ -824,25 +824,26 @@ header {
   left: 26.69rem;
 }
 
-.div,
-.frame-discount-child {
-  position: absolute;
-  left: 0.19rem;
+.div {
+  position: relative;
+  left: 0.20rem;
+  min-width: 3.5rem;
+  border-radius: var(--br-10xs);
+
+  background-color: coral;
 }
 
-.frame-discount-child {
-  top: 0.13rem;
+#reduction {
   border-radius: var(--br-10xs);
-  width: 1.38rem;
-  height: 1.06rem;
-  object-fit: cover;
+
 }
+
 
 .div {
   top: 0.25rem;
   display: inline-block;
   width: 1.94rem;
-  height: 1.5rem;
+  height: 1rem;
 }
 
 .frame-discount {
@@ -850,7 +851,7 @@ header {
   top: 8.25rem;
   left: 26.75rem;
   background-color: var(--color-whitesmoke);
-  width: 1.81rem;
+  min-width: 3.81rem;
   height: 1.38rem;
   overflow: hidden;
   font-size: var(--font-size-2xs);
@@ -866,13 +867,22 @@ header {
 
 .cont-img {
   position: absolute;
-  left: 30px;
+  left: 31px;
+  top: 30px;
   max-width: 300px;
 }
 
 #mainImage {
   max-width: 300px;
   transform: translate(5%);
+}
+
+.product-namew {
+  font-weight: 500;
+  font-size: 15px;
+  left: 20px;
+  position: relative;
+  top: 5px;
 }
 
 /* .frame-image-principale {
@@ -1312,7 +1322,7 @@ header {
   background-color: var(--color-whitesmoke);
   width: 42.88rem;
   height: 13.75rem;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .frame-fiche-tech-child {
@@ -1847,6 +1857,10 @@ th {
 
   .frame-promoted {
     left: 0;
+
+    top: 4.31rem;
+    left: 21.63rem;
+
     width: 100%;
     margin: 400px 0;
   }
@@ -1944,6 +1958,7 @@ th {
 
   .frame-promoted {
     left: 0;
+
     width: 100%;
     margin: 400px 0;
   }
