--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -2397,7 +2397,7 @@ input[type="range"]::-webkit-slider-runnable-track {
 	width: var(--percent100);
 	height: 5px;
 	cursor: pointer;
-	background-color: var(--border-color);
+	background-color: #36302d00;
 	box-shadow: none;
 	border: 0;
 }
@@ -3954,4 +3954,345 @@ input[type="range"]::-webkit-slider-thumb {
 	}
   }
 
+ .filter-container-class *{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
+  }
+  
+::selection{
+	color: #fff;
+	background: #FB5607;
+  }
+    
 
+.filter-container-class .wrapper {
+  width: 300px;
+  margin-top: 10px;
+  background: #fff;
+  border-radius: 10px;
+  padding: 15px 25px 30px;
+  box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
+}
+
+.filter-container-class header h2 {
+  font-size: 17px;
+  font-weight: 600;
+}
+
+.filter-container-class header p {
+  font-size: 16px;
+}
+
+.filter-container-class .price-input {
+  width: 100%;
+  display: flex;
+  margin: 15px 0 25px;
+}
+
+.filter-container-class .price-input .field {
+  display: flex;
+  width: 100%;
+  height: 45px;
+  align-items: center;
+}
+
+.filter-container-class .field input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-size: 15px;
+  margin-left: 12px;
+  border-radius: 5px;
+  text-align: center;
+  border: 1px solid #999;
+  -moz-appearance: textfield;
+}
+
+.filter-container-class input[type="number"]::-webkit-outer-spin-button,
+.filter-container-class input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+.filter-container-class .price-input .separator {
+  width: 130px;
+  display: flex;
+  font-size: 19px;
+  align-items: center;
+  justify-content: center;
+}
+
+.filter-container-class .slider {
+  height: 5px;
+  position: relative;
+  background: #ddd;
+  border-radius: 5px;
+}
+
+.filter-container-class .slider .progress {
+  height: 100%;
+  left: 0%;
+  right: 0%;
+  position: absolute;
+  border-radius: 5px;
+  background: #FB5607;
+}
+
+.filter-container-class .range-input {
+  position: relative;
+}
+
+.filter-container-class .range-input input {
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  top: -5px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.filter-container-class input[type="range"]::-webkit-slider-thumb {
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  background: #FB5607;
+  pointer-events: auto;
+  -webkit-appearance: none;
+}
+
+.filter-container-class input[type="range"]::-moz-range-thumb {
+  height: 17px;
+  width: 17px;
+  border: none;
+  border-radius: 50%;
+  background: #000000;
+  pointer-events: auto;
+  -moz-appearance: none;
+}
+
+.filter-container-class .filter-container {
+  position: relative;
+}
+
+.filter-container-class #filter-button {
+  background-color: #0f4675;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+  border-radius: 3px;
+  padding: 10px 20px;
+  border: none;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.filter-container-class #filter-button:hover{
+	background-color: #13304c;
+}
+
+.filter-container-class .filter-options {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #ffffff;
+  padding: 10px;
+  border: 1px solid #ccc;
+  z-index: 1;
+}
+
+.filter-container-class .filter-options h2 {
+  margin-top: 0;
+  text-align: center;
+}
+
+.filter-container-class .filter-section {
+  margin-bottom: 10px;
+}
+
+.filter-container-class input[type="checkbox"] {
+  margin-right: 5px;
+  margin-left: 10px;
+}
+
+.filter-container-class input[type="checkbox"]:checked {
+  background-color: #FB5607;
+  color: #FB5607;
+}
+
+.filter-container-class input[type="range"] {
+  width: 100%;
+}
+
+.filter-container-class #min-price,
+.filter-container-class #max-price {
+  display: inline-block;
+  margin-top: 5px;
+}
+
+/* Hide the default checkboxes */
+.filter-container-class input[type="checkbox"] {
+  display: none;
+}
+.filter-container-class input[type="radio"] {
+  margin-right:10px;
+}
+
+/* Define the custom checkbox style */
+.filter-container-class .custom-checkbox {
+  display: inline-block;
+  width: 20px;
+  margin-bottom: -5px;
+  height: 20px;
+  background-color: #eee;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-right: 10px;
+}
+
+/* Add a checkmark to the custom checkbox */
+.filter-container-class .custom-checkbox::after {
+  content: "";
+  display: block;
+  width: 50%;
+  height: 50%;
+  margin: 25% auto;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: background-color 0.3s;
+}
+
+/* Style the custom checkbox when it is checked */
+.filter-container-class input[type="checkbox"]:checked + .custom-checkbox::after {
+  background-color: #FB5607;
+}
+
+/* Style the custom checkbox when it is hovered */
+.filter-container-class input[type="checkbox"]:hover + .custom-checkbox {
+  background-color: #ccc;
+}
+
+.filter-container-class .review-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-container-class .flex-review {
+  padding: 10px 0px;
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-container-class .flex-review label {
+  padding: 5px 0;
+}
+
+.filter-container-class .flex-review img {
+  width: 240px;
+}
+
+.filter-container-class .review-lable {
+  display: flex;
+  align-items: center;
+  justify-content: baseline;
+}
+
+/* Style the radio buttons */
+.filter-container-class input[type="radio"] {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+}
+
+/* Style the radio buttons when checked */
+.filter-container-class input[type="radio"]:checked {
+  border-color: #FB5607; /* Change border color to orange */
+}
+
+.filter-container-class .priceq-input{
+  width: 100%;
+  display: flex;
+  margin: 30px 0 35px;
+}
+.filter-container-class .priceq-input .field{
+  display: flex;
+  width: 100%;
+  height: 45px;
+  align-items: center;
+}
+
+.priceq-input .separator{
+  width: 130px;
+  display: flex;
+  font-size: 19px;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider .progressq{
+  height: 100%;
+  left: 0%;
+  right: 0%;
+  position: absolute;
+  border-radius: 5px;
+  background: #FB5607;
+}
+.rangeq-input{
+  position: relative;
+}
+.rangeq-input input{
+  position: absolute;
+  width: 100%;
+  height: 5px;
+  top: -5px;
+  background: none;
+  pointer-events: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+#apply-filter-btn{
+    background-color: #FB5607;
+    width: 100%;
+    border: none;
+    border-radius: 7px;
+    padding: 5px;
+    margin: 7px 0;
+    color: white;
+}
+
+
+    /* Custom styles for the waiting dialog */
+    .waiting-dialog {
+		display: none;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		height: 100vh;
+		background-color: rgba(255, 130, 6, 0.235);
+		position: fixed;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		z-index: 9999;
+	  }
+  
+	  .waiting-dialog .spinner {
+		font-size: 3rem;
+		color: #17A2B8;
+		animation: spin 1s infinite linear;
+	  }
+  
+	  .waiting-dialog .message {
+		margin-top: 1rem;
+		color: blue;
+		font-size: 1.2rem;
+	  }
+  
+	  @keyframes spin {
+		0% { transform: rotate(0deg); }
+		100% { transform: rotate(360deg); }
+	  }
